Inititalized nx monorepo with angular app

--- a/apps/ng-scrappy/src/index.html
+++ b/apps/ng-scrappy/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <scappy.org-root></scappy.org-root>
+    <ng-scrappy-root></ng-scrappy-root>
   </body>
 </html>
