--- a/apps/ng-scrappy/src/index.html
+++ b/apps/ng-scrappy/src/index.html
@@ -2,10 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>NgScrappy</title>
+    <title>Scrappy Dictionary</title>
     <base href="/" />
+
+    <!-- PWA Stuff -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#111111" />
+    <meta name="apple-mobile-web-app-title" content="Scrappy Dictionary" />
+    <meta name="theme-color" content="#E8592A" />
+    <meta name="description" content="A Dictionary for Kenyan Languages - Scrapped from the People" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="shortcut icon" href="icons/icon-128x128.png" />
+    <link rel="apple-touch-icon" href="assets/icons/icon-512x512.png" />
+
+    <!-- Third-party Styling Dependencies -->
+    <link rel="stylesheet" href="https://bootswatch.com/4/cyborg/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Quicksand' rel='stylesheet'>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <ng-scrappy-root></ng-scrappy-root>
