feat: add algolia search

--- a/apps/ng-scrappy/src/index.html
+++ b/apps/ng-scrappy/src/index.html
@@ -29,4 +29,9 @@
   <body>
     <ng-scrappy-root></ng-scrappy-root>
   </body>
+      <script type="text/javascript">
+        window.process = {
+            env: { DEBUG: undefined },
+        };
+    </script>
 </html>
