--- a/apps/ng-scrappy/src/index.html
+++ b/apps/ng-scrappy/src/index.html
@@ -10,7 +10,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#111111" />
     <meta name="apple-mobile-web-app-title" content="Scrappy Dictionary" />
     <meta name="theme-color" content="#E8592A" />
-    <meta name="description" content="A Dictionary for Kenyan Languages - Scrapped from the People" />
+    <meta name="description" content="A Dictionary for Kenyan Languages - scraped from the People" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
